@@ -587,7 +587,10 @@ Command : COMMANDS\n\r\
 Usage   : COMMANDS\n\r\
 Example : commands\n\r\
 Short(s): \n\r\
-Gives a list of all valid commands, excepting SOCIALS
+Gives a list of all valid commands, excepting SOCIALS.\n\r\
+\n\r\
+Players can also enter COMMANDS CLEAR to empty this users \
+command queue.
 	
 COMPARE=\
 Command : COMPARE\n\r\
